--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,14 @@ storage/*.key
 .env
 Homestead.yaml
 Homestead.json
+yarn-error.log
+/.vagrant
 
 # Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
 .rocketeer/
+
+# PHPStorm
+.idea
+
+# VSCode
+/.vscode
