--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME=Loyep
+APP_ENV=production
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=daily
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -24,8 +24,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=smtp.exmail.qq.com
+MAIL_PORT=465
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
