--- a/loyep/planet/package.json
+++ b/loyep/planet/package.json
@@ -10,13 +10,18 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "bootstrap": "^4.1.3",
+        "font-awesome": "^4.7.0",
+        "themify-icons-sass": "^1.0.1",
+        "animsition": "^4.0.2",
         "axios": "^0.18",
-        "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7"
-    }
+        "vue": "^2.5.7",
+        "bootstrap-sass": "^3.3.7"
+    },
+    "dependencies": {}
 }
