update  mix config

--- a/loyep/planet/composer.json
+++ b/loyep/planet/composer.json
@@ -23,7 +23,10 @@
     "autoload": {
         "psr-4": {
             "Loyep\\Planet\\": "src/"
-        }
+        },
+        "files": [
+            "src/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
