--- a/loyep/planet/package.json
+++ b/loyep/planet/package.json
@@ -20,8 +20,7 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
-        "vue": "^2.5.7",
-        "bootstrap-sass": "^3.3.7"
+        "vue": "^2.5.7"
     },
     "dependencies": {}
 }
